# GingiGauge

./: .gitignore  inference.py  inference_deeplab.py  inference_segformer.py  pyproject.toml  train.py
evaluate/: evaluate_medsegdiff.py  evaluate_segformer.py
utils/: clahe.py  filter_dataset.py  xml_to_mask.py
xml_annotations/: annotations_test.xml  annotations_val.xml
